# cpp2025

./: .gitignore  Hw1.cpp  MathLibrary.h  dz1.cpp  dz2.cpp  hm1 Shnaider Alexanr.cpp  hm2.1 Alexandr Shnaider.cpp  hm2.2 Alexandr Shnaider.cpp  main.cpp  minihomework.sln  square.cpp  trapezium.cpp  Площадь квадрата.cpp  Площадь трапеции.cpp
sem2/: CMakeLists.txt  Constants.h  DLLusing.vcxproj  Dll1.vcxproj  Dll1.vcxproj.filters  game.cpp  game.h  testLibrary.cpp  utils.cpp  utils.h
sem2/AkhmetovDF/homework_2/: TypingTrainer.cpp  TypingTrainer.h  main.cpp
sem2/AkhmetovDF/homework_3/: main.cpp  output.txt
sem2/AkhmetovDF/homework_4/: main.cpp  output.txt
sem2/AlekseenkoAA/homework_2/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  entity.h  main.cpp  randomSystem.cpp  randomSystem.h
sem2/AlekseenkoAA/homework_3/: main.cpp  output.txt
sem2/AlekseenkoAA/homework_4/: main.cpp  output.txt
sem2/AlekseenkoAA/homework_5/: SpaceShooterMini5.sln  SpaceShooterMini5.vcxproj  SpaceShooterMini5.vcxproj.filters  asteroid.cpp  asteroid.h  constants.h  game.cpp  game.h  main.cpp  player.cpp  player.h  projectile.cpp  projectile.h  randomsystem.cpp  randomsystem.h
sem2/BakmanRD/: CMakeLists.txt  main.cpp
sem2/BakmanRD/Mini_HW_3/: main.cpp  output.txt
sem2/BakmanRD/Mini_HW_4/: main.cpp  output.txt
sem2/BakmanRD/Mini_HW_5/: Game.cpp  Game.h
sem2/BakmanRD/app/: CMakeLists.txt  main.cpp
sem2/BakmanRD/mathlib/: CMakeLists.txt  vec3.cpp  vec3.h
sem2/BelousovVE/: Vec3.cpp  Vec3.h  Vec3.vcxproj  Vec3Test.cpp  Vec3Test.vcxproj
sem2/BelousovVE/homework02/: BouncingCircleShape.cpp  BouncingCircleShape.h  Constants.h  GameCycle.cpp  GameCycle.h  Timer.cpp  Timer.h  main.cpp
sem2/BelousovVE/homework03/: input.txt  main.cpp  output.txt
sem2/BelousovVE/homework04/: main.cpp  output.txt
sem2/BelyaevNA/homework_3/: StringForge.cpp  input.txt  output.txt
sem2/BelyaevNA/homework_4/: VectorCrafter.cpp  output.txt
sem2/BernadskiyDM/homework_1/: MacOsCompileArguments.txt  Test.docx  Vec3.cpp  Vec3.h  vec3_main.cpp
sem2/BernadskiyDM/homework_2/: CMakeLists.txt  main.cpp  typing_trainer.cpp  typing_trainer.h
sem2/BernadskiyDM/homework_3/: main.cpp  output.txt
sem2/BernadskiyDM/homework_4/: main.cpp  output.txt
sem2/BetrozovNS/homework_2/: game.cpp  game.h  main.cpp
sem2/BetrozovNS/homework_3/: input.txt  output.txt  vectooor.cpp
sem2/BetrozovNS/homework_4/: output.txt  vectorand.cpp
sem2/BetrozovNS/homework_5/: card.cpp  card.h  game.cpp  game.h
sem2/BogdanovIV/mini_dz1/: CMakeLists.txt  main.cpp
sem2/BogdanovIV/mini_dz2/: CMakeLists.txt  Readme.txt
sem2/BogdanovIV/mini_dz3/: main.cpp
sem2/BogdanovIV/mini_dz4/: main.cpp
sem2/BogdanovIV/mini_dz5/: Readme.txt
sem2/ChekantsevDV/Dll1/: Dll1.slnx
sem2/ChekantsevDV/HW1/: HW1.slnx
sem2/Cherendichenko Ivan/mini_hw2/: game.cpp  game.h  game_config.h  target.cpp  target.h
sem2/Cherendichenko Ivan/mini_hw3/: input.txt  main.cpp  output.txt  text_processor.cpp  text_processor.h
sem2/Cherendichenko Ivan/mini_hw4/: main.cpp  number_processor.cpp  number_processor.h  output.txt
sem2/Cherendichenko Ivan/mini_hw5/: Card.cpp  Card.h  Game.cpp  Game.h
sem2/ChumasovaEM/homework_2/: constants.h  game.cpp  game.h  input.cpp  input.h  score.cpp  score.h  symbol.cpp  symbol.h  timer.cpp  timer.h
sem2/DrozdovaAA/mini_homework_1/: VectLib.slnx
sem2/DrozdovaAA/mini_homework_2/: TypingGame.cpp  main.cpp  mini_hw_2.slnx  mini_hw_2.vcxproj  mini_hw_2.vcxproj.filters
sem2/DrozdovaAA/mini_homework_3/: output.txt  sem2_mini_hw_3.cpp
sem2/DrozdovaAA/mini_homework_4/: output.txt  sem2_mini_hw_4.cpp
sem2/DrozdovaAA/mini_homework_5/: Card.cpp  Card.h  Game.cpp  Game.h
sem2/DurovaAV/Homework2/: Ball.cpp  Ball.h  GameSession.cpp  GameSession.h  config.h  main.cpp
sem2/DurovaAV/Homework3/: main.cpp  output.txt
sem2/DurovaAV/Homework4/: main.cpp  output.txt
sem2/DurovaAV/Homework5/: main.cpp
sem2/DyadkinaUA/homework_1/: Vec3Client.cpp  Vec3Client.vcxproj  Vec3Library.vcxproj  vec3.cpp  vec3.h
sem2/DyadkinaUA/homework_2/: game.cpp  game.h  target.cpp  target.h
sem2/EfimovVA/Minihomework1/: Minihomework1.sln
sem2/EmelianovaED/homework_1/: ConsoleMath.cpp  ConsoleMath.vcxproj  ConsoleMath.vcxproj.filters  MiniLib.cpp  MiniLib.h  MiniLib.vcxproj  MiniLib.vcxproj.filters
sem2/EmelianovaED/homework_2/: Counter.cpp  Counter.h  Game.cpp  Game.h  RandomSymbol.cpp  RandomSymbol.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  main.cpp
sem2/EmelianovaED/homework_3/: input.txt  main.cpp  output.txt
sem2/EmelianovaED/homework_4/: main.cpp  output.txt
sem2/EmelianovaED/homework_5/: Cards.cpp  Cards.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  main.cpp
sem2/Gavrilchik D/homework_1/: build.bat  dllmain.cpp  main.cpp  vec3.cpp  vec3.h
sem2/Gavrilchik D/homework_2/: Circle.cpp  Circle.h  game.cpp  game.h  main.cpp
sem2/Gavrilchik D/homework_3/: input.txt  main.cpp  output.txt  text_processor.cpp  text_processor.h
sem2/Gavrilchik D/homework_4/: main.cpp  output.txt  vector_processor.cpp  vector_processor.h
sem2/GerasimovaPV/homework_2/: circle.cpp  circle.h  db.h  main.cpp
sem2/GerasimovaPV/homework_3/: main.cpp  output.txt
sem2/GerasimovaPV/homework_4/: main.cpp  output.txt
sem2/GerasimovaPV/homework_5/: CMakeLists.txt  main.cpp  meteor.cpp  meteor.h
sem2/GirakDA/: FileWriter.h  main.cpp
sem2/GirakDA/homework_2/: TypingGame.h  (+2 more)
sem2/IsmagilovaYY/: MathLibrary.cpp  MathLibrary.h  task_1_dll.sln  task_1_dll.vcxproj
sem2/KhakhordinaMarina/: DLLusing.cpp  DLLusing.vcxproj.filters  MathLibrary.cpp  MathLibrary.h  dllmain.cpp
sem2/KholodyukKR/: functions.cpp  functions.h  main.cpp  output.txt
sem2/KlochkovSI/: .gitignore  homework_1.sln
sem2/Kovalko Maxim - Variant 1 SFML game/: main.cpp
sem2/NovikovAM/: main.cpp  vec3.h
sem2/RepnikovVA/: HW4.cpp  output.txt
sem2/TestProgram/: MathLibrary.h  MathLibrary.lib  TestProgram.vcxproj  main.cpp
sem2/Vec3Solution/: Vec3Solution.sln
sem2/homework_2/: main.cpp
sem2/МаксимоваДА/: Game.cpp  Game.h  main.cpp
sem2/Тулаков ТР/: GameInit.cpp
(+2298 files in other folders)
